# cli-conformity

./: CHANGELOG.md  README.md  pyproject.toml
src/cli_conformity/: __init__.py  app.py  client.py  config.py  errors.py  guides.py  output.py  runner.py  state.py  telemetry.py  testing.py  version.py
tests/: conftest.py  test_app.py  test_client.py  test_config.py  test_guides.py  test_output.py  test_runner.py  test_state.py  test_telemetry.py
