[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-conformity"
version = "0.1.7"
description = "Enforces consistent CLI interfaces across Typer-based Python tools."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cli_conformity"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
